# unwind

./: .gitignore  README.md  electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  打工小人demo.html
backend/: .env.example  .gitignore  README.md  pyproject.toml  start.sh
backend/.claude/: launch.json
backend/deploy/: nginx-unwind.conf  sillytavern-unwind-location.conf  unwind.service
backend/docs/: README.md  STARTUP.md  preset_audio_catalog_v0.md
backend/docs/contracts/: agent_tool_contract.md  agent_workflow_protocol_v0.md  ai_query_planner_contract_v0.md  algo_p0_design_v1.md  backend_p0_api.md  hermes_agent_runtime.md  minimax_hubless_audio_tools.md  minimax_poc_checklist.md  profile_agent_schema_v0.md  voice_dialog_ws.md  voice_dialog_ws_backend.md
backend/floppy_backend/: __init__.py  catalog.py  config.py  db.py  demo_page.py  logging_setup.py  main.py  mcp_server.py  models.py  repositories.py  seed.py  showcase_page.py  showcase_script.py  showcase_skills.py  storage.py  utils.py  voice_page.py  voice_profiles.py  voice_script.py
backend/scripts/: ai_planner_smoke.py  cleanup_test_assets.py  demo_chat.py  import_real_audio.py  minimax_hubless_smoke.py  minimax_smoke.py  minimax_stream_tts_smoke.py  prewarm_cache.py  voice_ws_client.py  volc_asr_smoke.py  volc_tts_smoke.py
backend/tests/: conftest.py  test_backend_smoke.py  test_enterprise_search.py  test_library.py  test_music_generation.py  test_query_planner.py  test_script_guard.py  test_showcase.py  test_voice_session.py  test_workflow_contracts.py
(+729 files in other folders)
