[project]
name = "floppy-backend"
version = "0.1.0"
description = "Backend and algorithm MVP for Unwind, an AI stress-relief companion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "websockets>=13.0,<16.0",
    "httpx>=0.27.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]
mcp = [
    "mcp>=1.26.0,<2.0.0",
]

[tool.setuptools.packages.find]
include = ["floppy_backend*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
